CloseWindow Command Added

--- a/ListDb/App.config
+++ b/ListDb/App.config
@@ -19,5 +19,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="Entities" connectionString="metadata=res://*/ModelContext.Model1.csdl|res://*/ModelContext.Model1.ssdl|res://*/ModelContext.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ListDb.Model.ListContext;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ListDBEntities" connectionString="metadata=res://*/EntityModel.Model1.csdl|res://*/EntityModel.Model1.ssdl|res://*/EntityModel.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=ListDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
